# mod_auth_pubtkt

./: .gitignore  CHANGELOG  LICENSE  Makefile  README.md  build.sh  configure  configure.ac  mod_auth_pubtkt.conf  mod_auth_pubtkt.spec
docs/: install.html  style.css
perl-login/: README.perl.md  key.priv.pem  key.pub.pem  mod_auth_pubtkt.pm  test_pubtkt.pl
perl-login/minimal_cgi/: login.pl
php-login/: ldap.php  login.php  logout.php  pubtkt.inc  style.css
php-login/private/: tkt_privkey_dsa.pem  tkt_privkey_rsa.pem  tkt_pubkey_dsa.pem  tkt_pubkey_rsa.pem  users.txt
src/: Makefile  Makefile.am  ap22_compat.h  ap_compat.h  mod_auth_pubtkt.c  mod_auth_pubtkt.h
